EMS: WIP: Moving CAMEL-related code (mainly CAMEL-to-EPL translator and Control Service code) to ems-morphemic-4.0 project. Adding abstract model classes in 'translator' in 'ems-main'